wwpdb/utils/nmr/cpp_src/CcpnPKParser.cpp

// Generated from /home/webmaster/py-wwpdb_utils_nmr/wwpdb/utils/tests-nmr/antlr-grammars-v4.10/CcpnPKParser.g4 by ANTLR 4.13.0


#include "CcpnPKParserVisitor.h"

#include "CcpnPKParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CcpnPKParserStaticData final {
  CcpnPKParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CcpnPKParserStaticData(const CcpnPKParserStaticData&) = delete;
  CcpnPKParserStaticData(CcpnPKParserStaticData&&) = delete;
  CcpnPKParserStaticData& operator=(const CcpnPKParserStaticData&) = delete;
  CcpnPKParserStaticData& operator=(CcpnPKParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag ccpnpkparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
CcpnPKParserStaticData *ccpnpkparserParserStaticData = nullptr;

void ccpnpkparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (ccpnpkparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(ccpnpkparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<CcpnPKParserStaticData>(
    std::vector<std::string>{
      "ccpn_pk", "peak_list_2d", "peak_2d", "peak_list_3d", "peak_3d", "peak_list_4d", 
      "peak_4d", "peak_list_wo_assign_2d", "peak_wo_assign_2d", "peak_list_wo_assign_3d", 
      "peak_wo_assign_3d", "peak_list_wo_assign_4d", "peak_wo_assign_4d", 
      "position", "number", "note"
    },
    std::vector<std::string>{
      "", "'Number'", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "'Position F2'", "'Position F3'", "'Position F4'", 
      "", "'Shift F2'", "'Shift F3'", "'Shift F4'", "", "'Assign F2'", "'Assign F3'", 
      "'Assign F4'", "'Height'", "'Volume'", "'Line Width F1 (Hz)'", "'Line Width F2 (Hz)'", 
      "'Line Width F3 (Hz)'", "'Line Width F4 (Hz)'", "'Merit'", "'Details'", 
      "'Fit Method'", "'Vol. Method'"
    },
    std::vector<std::string>{
      "", "Num", "Id", "Assign_F1", "Position_F1", "Shift_F1", "Integer", 
      "Float", "Real", "EXCLM_COMMENT", "SMCLN_COMMENT", "Simple_name", 
      "Any_name", "SPACE", "RETURN", "SECTION_COMMENT", "LINE_COMMENT", 
      "Id_", "Position_F1_", "Position_F2", "Position_F3", "Position_F4", 
      "Shift_F1_", "Shift_F2", "Shift_F3", "Shift_F4", "Assign_F1_", "Assign_F2", 
      "Assign_F3", "Assign_F4", "Height", "Volume", "Line_width_F1", "Line_width_F2", 
      "Line_width_F3", "Line_width_F4", "Merit", "Details", "Fit_method", 
      "Vol_method", "SPACE_VARS", "RETURN_VARS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  ccpnpkparserParserStaticData = staticData.release();
}

}

CcpnPKParser::CcpnPKParser(TokenStream *input) : CcpnPKParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CcpnPKParser::CcpnPKParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CcpnPKParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *ccpnpkparserParserStaticData->atn, ccpnpkparserParserStaticData->decisionToDFA, ccpnpkparserParserStaticData->sharedContextCache, options);
}

CcpnPKParser::~CcpnPKParser() {
  delete _interpreter;
}

const atn::ATN& CcpnPKParser::getATN() const {
  return *ccpnpkparserParserStaticData->atn;
}

std::string CcpnPKParser::getGrammarFileName() const {
  return "CcpnPKParser.g4";
}

const std::vector<std::string>& CcpnPKParser::getRuleNames() const {
  return ccpnpkparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& CcpnPKParser::getVocabulary() const {
  return ccpnpkparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CcpnPKParser::getSerializedATN() const {
  return ccpnpkparserParserStaticData->serializedATN;
}


//----------------- Ccpn_pkContext ------------------------------------------------------------------

CcpnPKParser::Ccpn_pkContext::Ccpn_pkContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CcpnPKParser::Ccpn_pkContext::EOF() {
  return getToken(CcpnPKParser::EOF, 0);
}

std::vector<tree::TerminalNode *> CcpnPKParser::Ccpn_pkContext::RETURN() {
  return getTokens(CcpnPKParser::RETURN);
}

tree::TerminalNode* CcpnPKParser::Ccpn_pkContext::RETURN(size_t i) {
  return getToken(CcpnPKParser::RETURN, i);
}

std::vector<CcpnPKParser::Peak_list_2dContext *> CcpnPKParser::Ccpn_pkContext::peak_list_2d() {
  return getRuleContexts<CcpnPKParser::Peak_list_2dContext>();
}

CcpnPKParser::Peak_list_2dContext* CcpnPKParser::Ccpn_pkContext::peak_list_2d(size_t i) {
  return getRuleContext<CcpnPKParser::Peak_list_2dContext>(i);
}

std::vector<CcpnPKParser::Peak_list_3dContext *> CcpnPKParser::Ccpn_pkContext::peak_list_3d() {
  return getRuleContexts<CcpnPKParser::Peak_list_3dContext>();
}

CcpnPKParser::Peak_list_3dContext* CcpnPKParser::Ccpn_pkContext::peak_list_3d(size_t i) {
  return getRuleContext<CcpnPKParser::Peak_list_3dContext>(i);
}

std::vector<CcpnPKParser::Peak_list_4dContext *> CcpnPKParser::Ccpn_pkContext::peak_list_4d() {
  return getRuleContexts<CcpnPKParser::Peak_list_4dContext>();
}

CcpnPKParser::Peak_list_4dContext* CcpnPKParser::Ccpn_pkContext::peak_list_4d(size_t i) {
  return getRuleContext<CcpnPKParser::Peak_list_4dContext>(i);
}

std::vector<CcpnPKParser::Peak_list_wo_assign_2dContext *> CcpnPKParser::Ccpn_pkContext::peak_list_wo_assign_2d() {
  return getRuleContexts<CcpnPKParser::Peak_list_wo_assign_2dContext>();
}

CcpnPKParser::Peak_list_wo_assign_2dContext* CcpnPKParser::Ccpn_pkContext::peak_list_wo_assign_2d(size_t i) {
  return getRuleContext<CcpnPKParser::Peak_list_wo_assign_2dContext>(i);
}

std::vector<CcpnPKParser::Peak_list_wo_assign_3dContext *> CcpnPKParser::Ccpn_pkContext::peak_list_wo_assign_3d() {
  return getRuleContexts<CcpnPKParser::Peak_list_wo_assign_3dContext>();
}

CcpnPKParser::Peak_list_wo_assign_3dContext* CcpnPKParser::Ccpn_pkContext::peak_list_wo_assign_3d(size_t i) {
  return getRuleContext<CcpnPKParser::Peak_list_wo_assign_3dContext>(i);
}

std::vector<CcpnPKParser::Peak_list_wo_assign_4dContext *> CcpnPKParser::Ccpn_pkContext::peak_list_wo_assign_4d() {
  return getRuleContexts<CcpnPKParser::Peak_list_wo_assign_4dContext>();
}

CcpnPKParser::Peak_list_wo_assign_4dContext* CcpnPKParser::Ccpn_pkContext::peak_list_wo_assign_4d(size_t i) {
  return getRuleContext<CcpnPKParser::Peak_list_wo_assign_4dContext>(i);
}


size_t CcpnPKParser::Ccpn_pkContext::getRuleIndex() const {
  return CcpnPKParser::RuleCcpn_pk;
}


std::any CcpnPKParser::Ccpn_pkContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CcpnPKParserVisitor*>(visitor))
    return parserVisitor->visitCcpn_pk(this);
  else
    return visitor->visitChildren(this);
}

CcpnPKParser::Ccpn_pkContext* CcpnPKParser::ccpn_pk() {
  Ccpn_pkContext *_localctx = _tracker.createInstance<Ccpn_pkContext>(_ctx, getState());
  enterRule(_localctx, 0, CcpnPKParser::RuleCcpn_pk);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(33);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      setState(32);
      match(CcpnPKParser::RETURN);
      break;
    }

    default:
      break;
    }
    setState(44);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 71712830) != 0)) {
      setState(42);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
      case 1: {
        setState(35);
        peak_list_2d();
        break;
      }

      case 2: {
        setState(36);
        peak_list_3d();
        break;
      }

      case 3: {
        setState(37);
        peak_list_4d();
        break;
      }

      case 4: {
        setState(38);
        peak_list_wo_assign_2d();
        break;
      }

      case 5: {
        setState(39);
        peak_list_wo_assign_3d();
        break;
      }

      case 6: {
        setState(40);
        peak_list_wo_assign_4d();
        break;
      }

      case 7: {
        setState(41);
        match(CcpnPKParser::RETURN);
        break;
      }

      default:
        break;
      }
      setState(46);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(47);
    match(CcpnPKParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Peak_list_2dContext ------------------------------------------------------------------

CcpnPKParser::Peak_list_2dContext::Peak_list_2dContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::RETURN_VARS() {
  return getToken(CcpnPKParser::RETURN_VARS, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Num() {
  return getToken(CcpnPKParser::Num, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Height() {
  return getToken(CcpnPKParser::Height, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Volume() {
  return getToken(CcpnPKParser::Volume, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Line_width_F1() {
  return getToken(CcpnPKParser::Line_width_F1, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Line_width_F2() {
  return getToken(CcpnPKParser::Line_width_F2, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Merit() {
  return getToken(CcpnPKParser::Merit, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Details() {
  return getToken(CcpnPKParser::Details, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Fit_method() {
  return getToken(CcpnPKParser::Fit_method, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Vol_method() {
  return getToken(CcpnPKParser::Vol_method, 0);
}

std::vector<CcpnPKParser::Peak_2dContext *> CcpnPKParser::Peak_list_2dContext::peak_2d() {
  return getRuleContexts<CcpnPKParser::Peak_2dContext>();
}

CcpnPKParser::Peak_2dContext* CcpnPKParser::Peak_list_2dContext::peak_2d(size_t i) {
  return getRuleContext<CcpnPKParser::Peak_2dContext>(i);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Id() {
  return getToken(CcpnPKParser::Id, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Id_() {
  return getToken(CcpnPKParser::Id_, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Assign_F1_() {
  return getToken(CcpnPKParser::Assign_F1_, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Assign_F2() {
  return getToken(CcpnPKParser::Assign_F2, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Position_F1() {
  return getToken(CcpnPKParser::Position_F1, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Shift_F1() {
  return getToken(CcpnPKParser::Shift_F1, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Position_F1_() {
  return getToken(CcpnPKParser::Position_F1_, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Shift_F1_() {
  return getToken(CcpnPKParser::Shift_F1_, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Position_F2() {
  return getToken(CcpnPKParser::Position_F2, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Shift_F2() {
  return getToken(CcpnPKParser::Shift_F2, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_2dContext::Assign_F1() {
  return getToken(CcpnPKParser::Assign_F1, 0);
}


size_t CcpnPKParser::Peak_list_2dContext::getRuleIndex() const {
  return CcpnPKParser::RulePeak_list_2d;
}


std::any CcpnPKParser::Peak_list_2dContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CcpnPKParserVisitor*>(visitor))
    return parserVisitor->visitPeak_list_2d(this);
  else
    return visitor->visitChildren(this);
}

CcpnPKParser::Peak_list_2dContext* CcpnPKParser::peak_list_2d() {
  Peak_list_2dContext *_localctx = _tracker.createInstance<Peak_list_2dContext>(_ctx, getState());
  enterRule(_localctx, 2, CcpnPKParser::RulePeak_list_2d);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CcpnPKParser::Num) {
      setState(49);
      match(CcpnPKParser::Num);
    }
    setState(53);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CcpnPKParser::Id

    || _la == CcpnPKParser::Id_) {
      setState(52);
      _la = _input->LA(1);
      if (!(_la == CcpnPKParser::Id

      || _la == CcpnPKParser::Id_)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
    }
    setState(63);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CcpnPKParser::Position_F1:
      case CcpnPKParser::Shift_F1:
      case CcpnPKParser::Position_F1_:
      case CcpnPKParser::Shift_F1_: {
        setState(55);
        _la = _input->LA(1);
        if (!((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & 4456496) != 0))) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(56);
        _la = _input->LA(1);
        if (!(_la == CcpnPKParser::Position_F2

        || _la == CcpnPKParser::Shift_F2)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(57);
        match(CcpnPKParser::Assign_F1_);
        setState(58);
        match(CcpnPKParser::Assign_F2);
        break;
      }

      case CcpnPKParser::Assign_F1:
      case CcpnPKParser::Assign_F1_: {
        setState(59);
        _la = _input->LA(1);
        if (!(_la == CcpnPKParser::Assign_F1

        || _la == CcpnPKParser::Assign_F1_)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(60);
        match(CcpnPKParser::Assign_F2);
        setState(61);
        _la = _input->LA(1);
        if (!(_la == CcpnPKParser::Position_F1_

        || _la == CcpnPKParser::Shift_F1_)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(62);
        _la = _input->LA(1);
        if (!(_la == CcpnPKParser::Position_F2

        || _la == CcpnPKParser::Shift_F2)) {
        _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(66);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CcpnPKParser::Height) {
      setState(65);
      match(CcpnPKParser::Height);
    }
    setState(69);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CcpnPKParser::Volume) {
      setState(68);
      match(CcpnPKParser::Volume);
    }
    setState(72);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CcpnPKParser::Line_width_F1) {
      setState(71);
      match(CcpnPKParser::Line_width_F1);
    }
    setState(75);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CcpnPKParser::Line_width_F2) {
      setState(74);
      match(CcpnPKParser::Line_width_F2);
    }
    setState(78);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CcpnPKParser::Merit) {
      setState(77);
      match(CcpnPKParser::Merit);
    }
    setState(81);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CcpnPKParser::Details) {
      setState(80);
      match(CcpnPKParser::Details);
    }
    setState(84);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CcpnPKParser::Fit_method) {
      setState(83);
      match(CcpnPKParser::Fit_method);
    }
    setState(87);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CcpnPKParser::Vol_method) {
      setState(86);
      match(CcpnPKParser::Vol_method);
    }
    setState(89);
    match(CcpnPKParser::RETURN_VARS);
    setState(91); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(90);
      peak_2d();
      setState(93); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2496) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Peak_2dContext ------------------------------------------------------------------

CcpnPKParser::Peak_2dContext::Peak_2dContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CcpnPKParser::Peak_2dContext::RETURN() {
  return getToken(CcpnPKParser::RETURN, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_2dContext::EOF() {
  return getToken(CcpnPKParser::EOF, 0);
}

std::vector<tree::TerminalNode *> CcpnPKParser::Peak_2dContext::Integer() {
  return getTokens(CcpnPKParser::Integer);
}

tree::TerminalNode* CcpnPKParser::Peak_2dContext::Integer(size_t i) {
  return getToken(CcpnPKParser::Integer, i);
}

std::vector<CcpnPKParser::NumberContext *> CcpnPKParser::Peak_2dContext::number() {
  return getRuleContexts<CcpnPKParser::NumberContext>();
}

CcpnPKParser::NumberContext* CcpnPKParser::Peak_2dContext::number(size_t i) {
  return getRuleContext<CcpnPKParser::NumberContext>(i);
}

std::vector<CcpnPKParser::PositionContext *> CcpnPKParser::Peak_2dContext::position() {
  return getRuleContexts<CcpnPKParser::PositionContext>();
}

CcpnPKParser::PositionContext* CcpnPKParser::Peak_2dContext::position(size_t i) {
  return getRuleContext<CcpnPKParser::PositionContext>(i);
}

std::vector<CcpnPKParser::NoteContext *> CcpnPKParser::Peak_2dContext::note() {
  return getRuleContexts<CcpnPKParser::NoteContext>();
}

CcpnPKParser::NoteContext* CcpnPKParser::Peak_2dContext::note(size_t i) {
  return getRuleContext<CcpnPKParser::NoteContext>(i);
}

std::vector<tree::TerminalNode *> CcpnPKParser::Peak_2dContext::Simple_name() {
  return getTokens(CcpnPKParser::Simple_name);
}

tree::TerminalNode* CcpnPKParser::Peak_2dContext::Simple_name(size_t i) {
  return getToken(CcpnPKParser::Simple_name, i);
}


size_t CcpnPKParser::Peak_2dContext::getRuleIndex() const {
  return CcpnPKParser::RulePeak_2d;
}


std::any CcpnPKParser::Peak_2dContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<CcpnPKParserVisitor*>(visitor))
    return parserVisitor->visitPeak_2d(this);
  else
    return visitor->visitChildren(this);
}

CcpnPKParser::Peak_2dContext* CcpnPKParser::peak_2d() {
  Peak_2dContext *_localctx = _tracker.createInstance<Peak_2dContext>(_ctx, getState());
  enterRule(_localctx, 4, CcpnPKParser::RulePeak_2d);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx)) {
    case 1: {
      setState(95);
      match(CcpnPKParser::Integer);
      break;
    }

    default:
      break;
    }
    setState(99);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 16, _ctx)) {
    case 1: {
      setState(98);
      match(CcpnPKParser::Integer);
      break;
    }

    default:
      break;
    }
    setState(111);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 17, _ctx)) {
    case 1: {
      setState(101);
      position();
      setState(102);
      position();
      setState(103);
      match(CcpnPKParser::Simple_name);
      setState(104);
      match(CcpnPKParser::Simple_name);
      break;
    }

    case 2: {
      setState(106);
      match(CcpnPKParser::Simple_name);
      setState(107);
      match(CcpnPKParser::Simple_name);
      setState(108);
      position();
      setState(109);
      position();
      break;
    }

    default:
      break;
    }
    setState(114);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 18, _ctx)) {
    case 1: {
      setState(113);
      number();
      break;
    }

    default:
      break;
    }
    setState(117);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 19, _ctx)) {
    case 1: {
      setState(116);
      number();
      break;
    }

    default:
      break;
    }
    setState(120);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 20, _ctx)) {
    case 1: {
      setState(119);
      position();
      break;
    }

    default:
      break;
    }
    setState(123);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 21, _ctx)) {
    case 1: {
      setState(122);
      position();
      break;
    }

    default:
      break;
    }
    setState(126);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 22, _ctx)) {
    case 1: {
      setState(125);
      position();
      break;
    }

    default:
      break;
    }
    setState(131);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 6592) != 0)) {
      setState(128);
      note();
      setState(133);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(134);
    _la = _input->LA(1);
    if (!(_la == CcpnPKParser::EOF

    || _la == CcpnPKParser::RETURN)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Peak_list_3dContext ------------------------------------------------------------------

CcpnPKParser::Peak_list_3dContext::Peak_list_3dContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CcpnPKParser::Peak_list_3dContext::RETURN_VARS() {
  return getToken(CcpnPKParser::RETURN_VARS, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_3dContext::Num() {
  return getToken(CcpnPKParser::Num, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_3dContext::Height() {
  return getToken(CcpnPKParser::Height, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_3dContext::Volume() {
  return getToken(CcpnPKParser::Volume, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_3dContext::Line_width_F1() {
  return getToken(CcpnPKParser::Line_width_F1, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_3dContext::Line_width_F2() {
  return getToken(CcpnPKParser::Line_width_F2, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_3dContext::Line_width_F3() {
  return getToken(CcpnPKParser::Line_width_F3, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_3dContext::Merit() {
  return getToken(CcpnPKParser::Merit, 0);
}

tree::TerminalNode* CcpnPKParser::Peak_list_3dContext::Details() {
  return getToken(CcpnPKParser::Details, 0);
}
